--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
