--- a/charts/springboot/values.yaml
+++ b/charts/springboot/values.yaml
@@ -11,6 +11,8 @@ service:
   type: ClusterIP
   externalPort: 8080
   internalPort: 8080
+  externalProxyPort: 11811
+  proxyPort: 11811
 ingress:
   enabled: false
 
