--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,8 @@ spring:
       hibernate:
          ddl-auto: none
       show-sql: true
+   datasource:
+      driver-class-name: org.postgresql.Driver
+      url: ${JDBC_URL:jdbc:postgresql://db-postgresql:5432/postgres} 
+      username: ${JDBC_USERNAME:postgres}
+      password: ${JDBC_PASSWORD:nonuseinproduction}
