--- a/src/main/resources/db/changelog/changes/changelog-1/databaseChangeLog.yaml
+++ b/src/main/resources/db/changelog/changes/changelog-1/databaseChangeLog.yaml
@@ -17,7 +17,7 @@ databaseChangeLog:
       author: jgpelaez
       changes:
       - sqlFile:
-         dbms: postgres
+         dbms: postgresql
          encoding: UTF-8
          endDelimiter: \nGO
          path: product-changelog-1.postgres.sql
@@ -33,8 +33,20 @@ databaseChangeLog:
          dbms: h2
          encoding: UTF-8
          endDelimiter: \nGO
-         path: product-insert-changelog-1.sql
+         path: product-insert-changelog-1.h2.sql
          relativeToChangelogFile: true
          splitStatements: true
          stripComments: true
-         
+  - changeSet:
+  
+      id: product-insert-changelog-postgres-1
+      author: jgpelaez
+      changes:
+      - sqlFile:
+         dbms: postgresql
+         encoding: UTF-8
+         endDelimiter: \nGO
+         path: product-insert-changelog-1.postgres.sql
+         relativeToChangelogFile: true
+         splitStatements: true
+         stripComments: true
